--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -116,41 +116,34 @@ jobs:
       - name: Login to EAS
         run: |
           echo "EXPO_TOKEN is set: $([[ -n "$EXPO_TOKEN" ]] && echo "yes" || echo "no")"
-          eas whoami
-
-      - name: Fetch RevenueCat API Key for Local Build
-        run: |
-          echo "Fetching RevenueCat API key for local build..."
-          # For local builds, we need to manually fetch the secret and create .env
-          # The prebuild script will use this environment variable
-          export REVENUECAT_API_KEY=${REVENUECAT_API_KEY}
-          echo "REVENUECAT_API_KEY available (length: ${#REVENUECAT_API_KEY} characters)"
-          echo "REVENUECAT_API_KEY=$REVENUECAT_API_KEY" >> $GITHUB_ENV
-        env:
-          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-          REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
+          eas whoami || (echo "❌ EAS login failed! Check EXPO_TOKEN secret" && exit 1)
+          echo "✅ EAS login successful"
 
       - name: Setup iOS build environment
         run: |
-          # Install Xcode command line tools
-          xcode-select --install || true
+          # Check if xcode-select is configured, install if needed
+          xcode-select -p || xcode-select --install || true
           # Install CocoaPods
           sudo gem install cocoapods
+          echo "✅ iOS build environment ready"
 
-      - name: Create .env file for RevenueCat
+      - name: Setup RevenueCat .env and EAS env
         run: |
-          echo "Creating .env file with RevenueCat API key..."
+          echo "🔐 Setting up RevenueCat API key for EAS build..."
+          
+          # Create .env file for Metro bundler
           echo "REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }}" > .env
-          echo "✅ .env file created"
-          # Verify it was created
-          cat .env | grep -c "REVENUECAT_API_KEY" && echo "✓ REVENUECAT_API_KEY present in .env"
-
-      - name: Set EAS Environment Variable
-        run: |
-          echo "Setting REVENUECAT_API_KEY for EAS build..."
-          export REVENUECAT_API_KEY="${{ secrets.REVENUECAT_API_KEY }}"
+          cp .env ./app/.env || true
+          cp .env ./src/.env || true
+          echo "✅ Created .env in root, app/, and src/"
+          
+          # Set environment variable for EAS build
           echo "REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }}" >> $GITHUB_ENV
           echo "✅ EAS environment variable set"
+          
+          # Verify setup
+          ls -la .env app/.env src/.env 2>/dev/null || echo "⚠️ Some .env files missing"
+          cat .env | head -c 50 | echo "..."
 
       - name: Build iOS Production
         run: |
@@ -176,13 +169,18 @@ jobs:
           }
           echo "Bundling test passed!"
 
-          # Extract build number from app.json
-          BUILD_NUMBER=$(cat app.json | grep -o '"buildNumber": "[^"]*"' | cut -d'"' -f4)
+          # Extract build number from app.json using jq (safer for nested JSON)
+          BUILD_NUMBER=$(jq -r '.expo.ios.buildNumber' app.json)
+          if [ -z "$BUILD_NUMBER" ] || [ "$BUILD_NUMBER" = "null" ]; then
+            echo "⚠️ Build number not found in app.json, using fallback"
+            BUILD_NUMBER=$(cat app.json | grep -o '"buildNumber": "[^"]*"' | cut -d'"' -f4 || echo "1")
+          fi
           echo "Building with build number: $BUILD_NUMBER"
 
           # Now run the actual build with build-specific filename
           echo "Starting EAS build..."
-          eas build --platform ios --profile production --local --non-interactive --output=./app-ios-build-${BUILD_NUMBER}.ipa || {
+          REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }} \
+          eas build --platform ios --profile production --local --non-interactive --output=./app-ios-build-${BUILD_NUMBER}.ipa --env-file .env || {
             echo "EAS build failed - check the logs above for details"
             exit 1
           }
@@ -196,8 +194,8 @@ jobs:
 
       - name: Submit to App Store (TestFlight)
         run: |
-          # Extract build number for submission
-          BUILD_NUMBER=$(cat app.json | grep -o '"buildNumber": "[^"]*"' | cut -d'"' -f4)
+          # Extract build number for submission using jq
+          BUILD_NUMBER=$(jq -r '.expo.ios.buildNumber' app.json || echo "1")
           IPA_FILE="./app-ios-build-${BUILD_NUMBER}.ipa"
           echo "Attempting TestFlight submission of build $BUILD_NUMBER..."
           echo "IPA file: $IPA_FILE"
@@ -212,8 +210,8 @@ jobs:
 
       - name: Upload iOS build to GitHub Releases
         run: |
-          # Extract build number for release upload
-          BUILD_NUMBER=$(cat app.json | grep -o '"buildNumber": "[^"]*"' | cut -d'"' -f4)
+          # Extract build number for release upload using jq
+          BUILD_NUMBER=$(jq -r '.expo.ios.buildNumber' app.json || echo "1")
           IPA_FILE="./app-ios-build-${BUILD_NUMBER}.ipa"
           echo "Uploading build $BUILD_NUMBER to GitHub Releases..."
           echo "IPA file: $IPA_FILE"
